<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Weather</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">Kyiv</string>
    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric">Metric</string>
    <string name="pref_units_imperial">Imperial</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notifications_key">notifications</string>
    <string name="pref_notifications_desc">Send notifications once per day</string>
    <string name="action_showlocation_map">Show location</string>
    <string name="action_share">Share</string>
    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today" translatable="true">Today</string>
    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow" translatable="true">Tomorrow</string>
    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day_of_week">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>
    <string name="format_temperature"><xliff:g id="temp">"%.0f"</xliff:g>\u00B0</string>
    <string name="format_humidity">Humidity: <xliff:g id="humidity">"%.0f"</xliff:g>%%</string>
    <string name="format_wind_metric">Wind:
        <xliff:g id="wind_speed">%1$.0f</xliff:g> km/H, <xliff:g id="date">%2$s</xliff:g>
    </string>
    <string name="format_wind_imperial">Wind:
        <xliff:g id="wind_speed">%1$.0f</xliff:g> mph, <xliff:g id="date">%2$s</xliff:g>
    </string>
    <string name="format_pressure">Pressure: <xliff:g id="pressure">"%.0f"</xliff:g> hPa</string>
    <string name="fontLight">sans-serif-light</string>
    <string name="fontCondensed">sans-serif-condensed</string>
    <string name="weatherIcon">Weather icon</string>
    <string name="sync_account_type">weather.bespalov.org.ua</string>
    <string name="content_authority">ua.org.bespalov.weather</string>
    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g>
        High: <xliff:g id="high">%2$s</xliff:g>
        Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <string name="pref_last_notification">last_notification</string>
    <string name="title_activity_settings">Settings</string>
</resources>
