<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true" />
    <ListPreference
        android:title="@string/pref_units_label"
        android:key="@string/pref_units_key"
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_values"
        />
    <SwitchPreference
        android:title="@string/pref_notifications"
        android:key="@string/pref_notifications_key"
        android:defaultValue="true"
        android:summaryOn="@string/pref_notifications_desc"
        android:summaryOff="@string/pref_notifications_desc"/>

</PreferenceScreen>
