<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="60dp"
    android:background="@drawable/touch_selector_today">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:orientation="vertical">
        <TextView
            android:id="@+id/list_item_date_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white"
            android:fontFamily="@string/fontCondensed"/>
        <TextView
            android:id="@+id/list_item_high_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="72sp"
            android:textColor="@color/white"
            android:fontFamily="@string/fontLight"/>
        <TextView
            android:id="@+id/list_item_low_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:textColor="@color/white"
            android:fontFamily="@string/fontLight"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/list_item_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/weatherIcon"/>
        <TextView
            android:id="@+id/list_item_forecast_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white"
            android:fontFamily="@string/fontCondensed"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>
</LinearLayout>
