<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="ua.org.bespalov.weather.DetailActivity$PlaceholderFragment"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:id="@+id/detail_dayname_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:fontFamily="@string/fontCondensed"/>
            <TextView
                android:id="@+id/detail_date_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@string/fontCondensed"
                android:textColor="@color/grey_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp">
            <TextView
                android:id="@+id/detail_high_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="96sp"
                android:fontFamily="@string/fontLight"/>
            <TextView
                android:id="@+id/detail_low_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="48sp"
                android:fontFamily="@string/fontLight"
                android:textColor="@color/grey_text"
                android:layout_marginStart="4dp"/>
            <TextView
                android:id="@+id/detail_humidity_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:fontFamily="@string/fontCondensed"
                android:layout_marginTop="4dp"/>
            <TextView
                android:id="@+id/detail_pressure_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:fontFamily="@string/fontCondensed"
                android:layout_marginTop="4dp"/>
            <TextView
                android:id="@+id/detail_wind_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:fontFamily="@string/fontCondensed"
                android:layout_marginTop="4dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="16dp">
            <ImageView
                android:id="@+id/item_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/weatherIcon"/>
            <TextView
                android:id="@+id/detail_forecast_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:fontFamily="@string/fontCondensed"
                android:textColor="@color/grey_text"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>